@@ -29,12 +29,11 @@ public class DebtControllerTest {
         eventRepo = new TestEventRepository();
         debtc = new DebtController(repo, partRepo, eventRepo);
 
-        debtor = new Participant("a", "b");
+        debtor = new Participant("a", "b", null, null, null, null);
         debtor.setId(1);
-        creditor = new Participant("c", "d");
+        creditor = new Participant("c", "d", null, null, null, null);
         creditor.setId(2);
         event = new Event("Test");
-        event.setId(1);
         d = new Debt(debtor, creditor, 100);
         partRepo.participants.add(debtor);
         partRepo.participants.add(creditor);
@@ -47,9 +46,9 @@ public class DebtControllerTest {
         assertTrue(repo.calledMethods.contains("save"));
         assertTrue(repo.debts.contains(d));
 
-        var br1 = debtc.save(Long.valueOf(0), d);
-        var br2 = debtc.save(event.getId(), new Debt(new Participant("John", "Doe"), creditor, 100));
-        var br3 = debtc.save(event.getId(), new Debt(debtor, new Participant("Jane", "Doe"), 100));
+        var br1 = debtc.save("x", d);
+        var br2 = debtc.save(event.getId(), new Debt(new Participant("John", "Doe", null, null, null, null), creditor, 100));
+        var br3 = debtc.save(event.getId(), new Debt(debtor, new Participant("Jane", "Doe", null, null, null, null), 100));
         assertEquals(BAD_REQUEST, br1.getStatusCode());
         assertEquals(BAD_REQUEST, br2.getStatusCode());
         assertEquals(BAD_REQUEST, br3.getStatusCode());
@@ -58,20 +57,20 @@ public class DebtControllerTest {
     @Test
     void getByEventIdTest() {
         d.setEvent(event);
-        assertEquals(d, debtc.getByEventId(1).getBody().get(0));
+        assertEquals(d, debtc.getByEventId(event.getId()).getBody().get(0));
 
-        var br = debtc.getByEventId(-1).getStatusCode();
-        var br2 = debtc.getByEventId(42).getStatusCode();
+        var br = debtc.getByEventId("bla").getStatusCode();
+        var br2 = debtc.getByEventId("den").getStatusCode();
         assertEquals(BAD_REQUEST, br);
         assertEquals(BAD_REQUEST, br2);
     }
 
     @Test
     void updateAmountTest() {
-        debtc.updateAmount(repo.debts.get(0).getId(), 1000);
-        assertEquals(1000, repo.debts.get(0).getAmount());
+        debtc.updateAmount(repo.debts.getFirst().getId(), 1000);
+        assertEquals(1000, repo.debts.getFirst().getAmount());
 
-        var br = debtc.getByEventId(100).getStatusCode();
+        var br = debtc.getByEventId("").getStatusCode();
         var br2 = debtc.updateAmount(42, 1000).getStatusCode();
         assertEquals(BAD_REQUEST, br);
         assertEquals(BAD_REQUEST, br2);
@@ -79,27 +78,27 @@ public class DebtControllerTest {
 
     @Test
     void getAllByCreditorIdTest() {
-        var br = debtc.getAllByCreditorId(Long.valueOf(-1));
+        var br = debtc.getAllByCreditorId( -1L);
         assertEquals(BAD_REQUEST, br.getStatusCode());
 
-        List<Debt> creditorDebts = debtc.getAllByCreditorId(Long.valueOf(creditor.getId())).getBody();
+        List<Debt> creditorDebts = debtc.getAllByCreditorId(creditor.getId()).getBody();
         assertTrue(repo.calledMethods.contains("getAllByCreditorId"));
         assertEquals(List.of(d), creditorDebts);
     }
 
     @Test
     void getAllByDebtorTest() {
-        var br = debtc.getAllByDebtorId(Long.valueOf(-1));
+        var br = debtc.getAllByDebtorId(-1L);
         assertEquals(BAD_REQUEST, br.getStatusCode());
 
-        List<Debt> debtorDebts = debtc.getAllByDebtorId(Long.valueOf(debtor.getId())).getBody();
+        List<Debt> debtorDebts = debtc.getAllByDebtorId(debtor.getId()).getBody();
         assertTrue(repo.calledMethods.contains("getAllByDebtorId"));
         assertEquals(List.of(d), debtorDebts);
     }
 
     @Test
     void deleteById() {
-        debtc.deleteById(repo.debts.get(0).getId());
+        debtc.deleteById(repo.debts.getFirst().getId());
         assertFalse(repo.debts.contains(d));
 
         var br = debtc.deleteById(-1);
